src/types/tests/snapshots/tgbot__types__tests__story__story_area.snap
---
source: src/types/tests/story.rs
expression: expected_struct
---
{
  "type": {
    "type": "link",
    "url": "url"
  },
  "position": {
    "corner_radius_percentage": 1.0,
    "height_percentage": 2.0,
    "rotation_angle": 3.0,
    "width_percentage": 4.0,
    "x_percentage": 5.0,
    "y_percentage": 6.0
  }
}
