src/types/tests/snapshots/tgbot__types__tests__story__story_area_type-3.snap
---
source: src/types/tests/story.rs
expression: expected_struct
---
{
  "type": "location",
  "latitude": 1.0,
  "longitude": 2.0,
  "address": {
    "country_code": "RU"
  }
}
