src/types/tests/snapshots/tgbot__types__tests__story__story_area_type-5.snap
---
source: src/types/tests/story.rs
expression: expected_struct
---
{
  "type": "suggested_reaction",
  "reaction_type": {
    "type": "paid"
  },
  "is_dark": true,
  "is_flipped": true
}
