src/types/tests/snapshots/tgbot__types__tests__story__story_area_type-7.snap
---
source: src/types/tests/story.rs
expression: expected_struct
---
{
  "type": "weather",
  "background_color": 1,
  "emoji": "test",
  "temperature": 2.0
}
