src/types/tests/snapshots/tgbot__types__tests__story__story_area_type.snap
---
source: src/types/tests/story.rs
expression: expected_struct
---
{
  "type": "link",
  "url": "url"
}
